feat: add consumer and use case reply to message
